# tensor-profiling-env

./: .cruft.json  Justfile  Pipfile  README.md  pyproject.toml
.github/workflows/: pr.yaml  register.yaml
src/tenprof/: add.py  profiling.py
src/tenprof/puzzles/triton/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  __init__.py
src/tenprof/tutorials/triton/: add.py
tests/tenprof/: test_tenprof.py
