[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tenprof"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    ######
    ### Custom Dependencies Section Begin
    ######
    "torch",
    "fvcore",
    "triton",
    "matplotlib",
    "pandas",
    "jaxtyping",
    ######
    ### Custom Dependencies Section End
    ######
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"tenprof" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

#######
### Miscellaneous Tool Configuration
#######
[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["tenprof"]

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules"

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
disallow_any_unimported = true
allow_redefinition = false
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

######
### Custom Directives Section Begin
######

######
### Custom Directives Section End
######
